# uavled

./: Cargo.toml  Cargo.toml.bak  README.md  build-c6.cmd  build-c6.ps1  partitions-ota.csv
.cargo/: config.toml
.claude/: settings.local.json
src/: lib.rs  ota.rs
