[package]
edition = "2021"
name    = "uavled"
version = "0.1.0"

[[bin]]
name = "uavled"
path = "./src/bin/main.rs"

[[bin]]
name = "rmt_test"
path = "./src/bin/rmt_test.rs"

[features]
default = ["chip-c3"]
chip-c3 = [
  "esp-backtrace/esp32c3",
  "esp-hal/esp32c3",
  "esp-hal-embassy/esp32c3",
  "esp-storage/esp32c3",
  "esp-wifi/esp32c3",
]
chip-c6 = [
  "esp-backtrace/esp32c6",
  "esp-hal/esp32c6",
  "esp-hal-embassy/esp32c6",
  "esp-storage/esp32c6",
  "esp-wifi/esp32c6",
]

[dependencies]
embassy-net = { version = "0.6.0", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = "0.7.0"
esp-backtrace = { version = "0.15.1", features = [
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-hal = { version = "1.0.0-beta.0", features = ["unstable"] }
esp-println = { version = "0.13.0", features = ["log"] }
log = { version = "0.4.21" }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
# for more networking protocol support see https://crates.io/crates/edge-net
bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "a5148d8ae679e021b78f53fd33afb8bb35d0b62e", features = [
  "macros",
  "mtu128",
] }
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
embedded-hal = "1.0.0"
esp-hal-embassy = { version = "0.7.0" }
esp-wifi = { version = "0.13.0", features = [
  "ble",
  "builtin-scheduler",
  "esp-alloc",
  "log",
] }
heapless = { version = "0.8.0", default-features = false }
nb = "1.1.0"
static_cell = { version = "2.1.0", features = ["nightly"] }
portable-atomic = { version = "1.12.0", features = ["unsafe-assume-single-core"] }
mquickjs-rs = { path = "../mquickjs-rs", default-features = false }
esp-storage = { version = "0.4", features = ["nor-flash"] }
embedded-storage = "0.3"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
